--- a/hover.html
+++ b/hover.html
@@ -93,7 +93,6 @@
     <div class="pagetitle">
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
           <li class="breadcrumb-item"><a href="hover.html">Hover</a></li>
         </ol>
       </nav>
@@ -153,7 +152,7 @@
   <script>
     (function() {
       // Load first page
-      setupMenu();
+      setupMenu(hov=true);
       
 
     })();
