Make PDF Viewer sticky as user scrolls

--- a/form.html
+++ b/form.html
@@ -193,7 +193,7 @@
         </div>
 
 
-        <div class="col-lg-8">
+        <div class="col-lg-8 sticky-pdf">
           <div class="card">
             <div class="card-body">
               <div id="pdf-main-container">
