Push test code for jumping to spot in PDF viewer

--- a/index.html
+++ b/index.html
@@ -160,10 +160,13 @@
               </p>
               <p class="center">
                 <button type="button" class="btn btn-primary" onclick="window.open('/hover.html','targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=400,height=700'); return false;">
-                  Walkthough Tool
+                  Walkthrough Tool
                 </button> 
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#disablebackdrop">
                   Application Assistant
+                </button>
+                <button type="button" class="btn btn-primary test-btn">
+                  Test
                 </button>
                 
                 <div class="modal fade" id="disablebackdrop" tabindex="-1" data-bs-backdrop="true" aria-hidden="true" style="display: none;">
