--- a/lrt.html
+++ b/lrt.html
@@ -267,13 +267,9 @@
     </header>
 
     <!-- End Header -->
-
-
     <div class="container page">
         <div class="row">
             <div class="col-md-12">
-
-
                 <section class="mdl-stepper">
                     <div class="mdl-grid">
                         <div class="mdl-cell mdl-cell--12-col">
@@ -283,20 +279,16 @@
                         </div>
                     </div>
                 </section>
-
-
-
-
-
             </div>
         </div>
     </div>
-    </div>
+
 
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="https://code.getmdl.io/1.2.1/material.js" type="text/javascript"></script>
     <script src="js/moz_viewer_controller.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
     <script src="js/wizardBuilder.js" type="text/javascript"></script>
     <script type="text/javascript">
         // TODO: Make it so that this can run after "stepper.js" is loaded?
