--- a/index.html
+++ b/index.html
@@ -40,21 +40,6 @@
                   <span class="usa-banner-button-text">Here’s how you know</span>    
                 </button>
                                 </p>
-                                <div id="nav-branding-bar">
-                                    <ul class="mm-branding-bar-menu">
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                        </li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,18 +84,18 @@
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="https://forms.sc.egov.usda.gov/eForms/welcomeAction.do?Home">Forms</a>
                             </li>
                         </ul>
-                        <span class="utility-nav-buttons">
-            <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">LOG IN | SIGN UP</a>                    
-          </span>
                     </div>
                 </div>
             </div>
@@ -137,7 +122,7 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Loan Readiness</div>
+                                            <div class="mm-top-level-title">Eligibility Assessment</div>
                                         </div>
                                     </a>
                                 </li>
@@ -145,7 +130,7 @@
                                     aria-level="1">
                                     <a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Walkthrough Page" data-category="Loans">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Walkthrough</div>
+                                            <div class="mm-top-level-title">Form Support</div>
                                         </div>
                                     </a>
                                 </li>
@@ -158,7 +143,7 @@
                                 <input name="utf8" type="hidden" value="✓">
                                 <input id="affiliatename" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
                                 <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
-                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
+                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                 <button type="submit" tabindex="0">    
                 <span class="usa-sr-only">Search</span>
               </button>
@@ -220,19 +205,6 @@
                             </div>
                         </div>
                         <div class="mm-utility-nav">
-                            <ul class="mm-branding-bar-menu">
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                </li>
-                            </ul>
                             <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                                 <li>
                                     <a href="/coronavirus/pandemic-assistance" title="USDA is dedicated to reaching a broad set of producers and agricultural businesses through our Pandemic Assistance for Producers initiative. " aria-label="Pandemic Assistance" tabindex="0" data-drupal-link-system-path="node/29151">Pandemic Assistance</a>
@@ -272,29 +244,38 @@
 
 
     <div class="container page">
+        
+        <div class="row">
+            <div class="col-md-12">
+                <h2 aria-label="Are your ready to apply for a farm loan?" title="Are your ready to apply for a farm loan?">Are your ready to apply for a farm loan?</h2>
+            </div>
+        </div>
+        
 
         <div class="row">
-
             <div class="col-md-6">
                 <div class="content-card accent-top h-100">
                     <div class="img">
                         <img src="/images/farm-loans-icon.png" alt="Farm">
                     </div>
                     <div class="headline">
-                        <h3>Farm Loan Application Walkthrough</h3>
+                        <h3>Welcome</h3>
                     </div>
                     <div class="content">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque condimentum ullamcorper dolor eu molestie. Aliquam vulputate dui id fringilla malesuada. Morbi quis libero placerat, pulvinar diam tincidunt, bibendum turpis. Nullam malesuada lorem
-                            ut mattis ornare. Sed lacinia felis at dui vehicula, in imperdiet nulla varius. Phasellus a purus quis urna iaculis finibus. Donec eget dolor fringilla, posuere lacus vitae, sodales sapien. Nullam ac ex id odio lobortis aliquet.
+                            Start your journey with FSA
                         </p>
                         <p>
-                            You can find detailed walkthrough of each application form and general overview of the application process below.
+                            <ul>
+                                <li>Am I eligible for an FSA Farm Loan?</li>
+                                <li>Which loans are right for me?</li>
+                                <li>Where can I get  help completing the loan application forms?</li>
+                            </ul>
                         </p>
                         <div class="container text-center pt-2">
                             <div class="btn-group" role="group">
-                                <a type="button" href="lrt.html" class="btn btn-success">Loan Readiness</a>
-                                <a type="button" href="walkthrough.html" class="btn btn-success">Start The Walkthrough</a>
+                                <a type="button" href="lrt.html" class="btn btn-success">Get Started</a>
+                                <a type="button" href="walkthrough.html" class="btn btn-success">Form Support</a>
                                 <a type="button" href="guides.html" class="btn btn-success">Read The Guides</a>
 
                             </div>
@@ -309,12 +290,13 @@
                         <img src="/images/tractor-equipment-icon.svg" alt="Farm">
                     </div>
                     <div class="headline">
-                        <h3>USDA Beginning Farmer and Rancher Resources</h3>
+                        <h3>FSA Farm Loans</h3>
                     </div>
                     <div class="content">
                         <p class="text-center mt-3">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/H9cHb5--a3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/dPfq0DrkUSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </p>
+                        <p>Watch the short video above. Then, click the button below to see if you are eligible.</p>
                     </div>
                 </div>
             </div>
