fixed issues in new json

--- a/lrt.html
+++ b/lrt.html
@@ -318,20 +318,19 @@
             gsap.to(window, {duration: 0.5, scrollTo: ".is-active"});
             
             let steps = getCookie("steps");
-            if (steps != "" && steps>1) {
-                for(let i=2;i<=steps;i++){
-                    WizardBuilder.addStep("lrt-stepper", i);
-                    WizardBuilder.goToStep("lrt-stepper", i);
-                }                
-            } 
-            // Create fast forward method 
-            // let goto = parseInt(getQueryVar(name = "goto"));
-            // if (goto) {
-            //     if (!isNaN(goto)) {
-            //         WizardBuilder.initialize("lrt-stepper", "wizard-content.json");
-            //         WizardBuilder.goToStep("lrt-stepper", goto);
-            //     }
-            // }            
+
+            if (steps != "") {
+                let stepArray=steps.split(",");
+                stepArray.forEach((item)=>{  
+                    if(item>2){
+                        console.log(item)
+                        WizardBuilder.addStep("lrt-stepper", item*1);
+                        WizardBuilder.goToStep("lrt-stepper", item*1);
+                    }
+                })    
+            } else {
+                setCookie("steps", "2", 365);
+            }
         })();
         function setCookie(cname, cvalue, exdays) {
           const d = new Date();
