--- a/guides.html
+++ b/guides.html
@@ -22,9 +22,9 @@
 
 <body>
 
-    <!-- ======= Header ======= -->
+     <!-- ======= Header ======= -->
 
-    <header class="main-header" role="banner" aria-label="Page Header">
+     <header class="main-header" role="banner" aria-label="Page Header">
         <!--wrapper for main header used to hide on print-->
         <div class="head-main">
             <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">            Skip to main content        </a>
@@ -40,21 +40,6 @@
                   <span class="usa-banner-button-text">Here’s how you know</span>    
                 </button>
                                 </p>
-                                <div id="nav-branding-bar">
-                                    <ul class="mm-branding-bar-menu">
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                        </li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,18 +84,18 @@
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="https://forms.sc.egov.usda.gov/eForms/welcomeAction.do?Home">Forms</a>
                             </li>
                         </ul>
-                        <span class="utility-nav-buttons">
-            <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">LOG IN | SIGN UP</a>                    
-          </span>
                     </div>
                 </div>
             </div>
@@ -137,7 +122,7 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Loan Readiness</div>
+                                            <div class="mm-top-level-title">Loan Eligibility</div>
                                         </div>
                                     </a>
                                 </li>
@@ -145,7 +130,7 @@
                                     aria-level="1">
                                     <a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Walkthrough Page" data-category="Loans">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Walkthrough</div>
+                                            <div class="mm-top-level-title">Form Support</div>
                                         </div>
                                     </a>
                                 </li>
@@ -158,7 +143,7 @@
                                 <input name="utf8" type="hidden" value="✓">
                                 <input id="affiliatename" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
                                 <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
-                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
+                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                 <button type="submit" tabindex="0">    
                 <span class="usa-sr-only">Search</span>
               </button>
@@ -220,19 +205,6 @@
                             </div>
                         </div>
                         <div class="mm-utility-nav">
-                            <ul class="mm-branding-bar-menu">
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                </li>
-                            </ul>
                             <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                                 <li>
                                     <a href="/coronavirus/pandemic-assistance" title="USDA is dedicated to reaching a broad set of producers and agricultural businesses through our Pandemic Assistance for Producers initiative. " aria-label="Pandemic Assistance" tabindex="0" data-drupal-link-system-path="node/29151">Pandemic Assistance</a>
@@ -265,7 +237,6 @@
 
 
     <!-- End Header -->
-
 
 
 
