--- a/lrt.html
+++ b/lrt.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Loan Assistance Tool / Home </title>
+    <title>Loan Assistance Tool / Home / Loan Eligibility</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -40,24 +40,9 @@
                             <div class="usa-banner-text">
                                 <p> An official website of the United States government
                                     <button class="usa-accordion-button usa-banner-button" aria-expanded="false" aria-controls="gov-banner">        
-                      <span class="usa-banner-button-text">Here’s how you know</span>    
-                    </button>
+                  <span class="usa-banner-button-text">Here’s how you know</span>    
+                </button>
                                 </p>
-                                <div id="nav-branding-bar">
-                                    <ul class="mm-branding-bar-menu">
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                        </li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -88,8 +73,8 @@
                     <div class="agency-banner">
                         <div class="agency-logo">
                             <span class="agency-logo">
-                  <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
-                </span>
+              <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
+            </span>
                             <a class="agency-logo-text" href="/" aria-label="Farm Service Agency - U.S. DEPARTMENT OF AGRICULTURE Farm Loan Walkthrough">
                                 <div class="agency-identity">
                                     <div class="agency-name">Farm Service Agency</div>
@@ -102,18 +87,18 @@
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="https://forms.sc.egov.usda.gov/eForms/welcomeAction.do?Home">Forms</a>
                             </li>
                         </ul>
-                        <span class="utility-nav-buttons">
-                <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">LOG IN | SIGN UP</a>                    
-              </span>
                     </div>
                 </div>
             </div>
@@ -140,7 +125,7 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link mm-active" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Loan Readiness</div>
+                                            <div class="mm-top-level-title">Loan Eligibility</div>
                                         </div>
                                     </a>
                                 </li>
@@ -148,7 +133,7 @@
                                     aria-level="1">
                                     <a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Walkthrough Page" data-category="Loans">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Walkthrough</div>
+                                            <div class="mm-top-level-title">Form Support</div>
                                         </div>
                                     </a>
                                 </li>
@@ -161,10 +146,10 @@
                                 <input name="utf8" type="hidden" value="✓">
                                 <input id="affiliatename" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
                                 <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
-                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
+                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                 <button type="submit" tabindex="0">    
-                    <span class="usa-sr-only">Search</span>
-                  </button>
+                <span class="usa-sr-only">Search</span>
+              </button>
                                 <input name="commit" type="hidden" value="Search">
                             </div>
                         </form>
@@ -181,8 +166,8 @@
                         <div class="mm-top-section-container">
                             <div class="mm-signup">
                                 <span class="utility-nav-buttons">    
-                    <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">        LOG IN | SIGN UP    </a>
-                  </span>
+                <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">        LOG IN | SIGN UP    </a>
+              </span>
                             </div>
                             <div class="mm-search">
                                 <div id="search-field-mobile">
@@ -193,8 +178,8 @@
                                             <label class="usa-sr-only" for="header-search-mobile">Search [ SITE DOMAIN ]</label>
                                             <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
                                             <button type="submit" tabindex="0">                
-                          <span class="usa-sr-only">Search</span>            
-                        </button>
+                      <span class="usa-sr-only">Search</span>            
+                    </button>
                                             <input name="commit" type="hidden" value="Search">
                                         </div>
                                     </form>
@@ -223,19 +208,6 @@
                             </div>
                         </div>
                         <div class="mm-utility-nav">
-                            <ul class="mm-branding-bar-menu">
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                </li>
-                            </ul>
                             <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                                 <li>
                                     <a href="/coronavirus/pandemic-assistance" title="USDA is dedicated to reaching a broad set of producers and agricultural businesses through our Pandemic Assistance for Producers initiative. " aria-label="Pandemic Assistance" tabindex="0" data-drupal-link-system-path="node/29151">Pandemic Assistance</a>
@@ -251,8 +223,8 @@
                                 </li>
                             </ul>
                             <span class="utility-nav-buttons">
-                  <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
-                </span>
+              <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
+            </span>
                         </div>
                     </div>
                 </div>
@@ -266,7 +238,9 @@
         </div>
     </header>
 
+
     <!-- End Header -->
+
 
 
     <div class="container page">
