--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                             <div class="usa-banner-text">
                                 <p> An official website of the United States government
                                     <button class="usa-accordion-button usa-banner-button" aria-expanded="false" aria-controls="gov-banner">        
-                  <span class="usa-banner-button-text">Here’s how you know</span>    
-                </button>
+                                      <a href="http://3.88.213.227/" class="usa-banner-button-text">Here’s how you know</a>    
+                                    </button>
                                 </p>
                             </div>
                         </div>
