--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                         <div class="usa-banner-inner container">
                             <img src="/images/flag-favicon-57.png" alt="U.S. flag">
                             <div class="usa-banner-text">
-                                <p>An official website of the United States government
+                                <p> An official website of the United States government
                                     <button class="usa-accordion-button usa-banner-button" aria-expanded="false" aria-controls="gov-banner">        
-                                      <a href="http://3.90.61.169/" class="usa-banner-button-text">Here’s how you know</a>    
+                                      <span class="usa-banner-button-text">Here’s how you know</span>    
                                     </button>
                                 </p>
                             </div>
@@ -317,7 +317,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.228/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <script src="js/farmers.min.js"></script> -->
+    <script src="js/farmers.min.js"></script>
 
 
     <script>
