resposive video in home page

--- a/index.html
+++ b/index.html
@@ -298,7 +298,9 @@
                     </div>
                     <div class="content">
                         <p class="text-center mt-3">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/dPfq0DrkUSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                         </p>
                         <p>Watch the short video above to learn about FSA farm loans.</p>
                     </div>
