--- a/guides.html
+++ b/guides.html
@@ -273,36 +273,31 @@
 
     <div class="container page">
 
-        <div class="row">
-
-            <div class="col-md-3">
-                <div class="content-card accent-top h-100">
-                    <div class="headline">
-                        <h3>Application Guides</h3>
-                    </div>
-                    <div class="content">
-                        <p>
-                            The guides below can provide you with some general information about the farm loan application process.
-                        </p>
-                    </div>
-                    <div class="link" id="guide-links"></div>
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="forms-holder">
+            <div class="col">
+                <div class="content-card accent-top form-card h-100">
+                  <div class="headline">
+                    <h3><a class="text-link" href="/guides/your_guide_to_farm_loans.pdf" download>Your Guide to FSA Farm Loans </a></h3>
+                  </div>
+                  <div class="content">
+                    <p>
+                      This booklet is for anyone who is seeking an FSA farm loan. It provides an overview of the USDA Farm Service Agency's Farm programs, loan types, eligibility requirements, and the application process.
+                    </p>
+                  </div>                  
                 </div>
             </div>
-
-            <div class="col-md-9">
-                <div class="content-card accent-top h-100">
-                    <div class="headline">
-                        <h3 id="form-title">...</h3>
-                        <p id="form-desc">...</p>
-                    </div>
-                    <div class="content">
-                        <iframe id="mozViewerFrame" src="" width="100%" height="700px">
-            Loading Files
-          </iframe>
-                    </div>
+            <div class="col">
+                <div class="content-card accent-top form-card h-100">
+                  <div class="headline">
+                    <h3><a class="text-link" href="/guides/fsa_farm__loan_compass.pdf" download>Your FSA Farm Loan Compass</a></h3>
+                  </div>
+                  <div class="content">
+                    <p>
+                      This guide is for recipients of FSA farm loans. It clarifies the partnership between FSA and the loan recipient and outlines the responsibilities of both parties.
+                    </p>
+                  </div>                  
                 </div>
             </div>
-
         </div>
 
     </div>
