--- a/guides.html
+++ b/guides.html
@@ -276,7 +276,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4" id="forms-holder">
             <div class="col">
                 <div class="content-card accent-top form-card h-100">
-                  <div class="headline">
+                  <div class="headline mb-5">
                     <h3><a class="text-link" href="/guides/your_guide_to_farm_loans.pdf" download>Your Guide to FSA Farm Loans </a></h3>
                   </div>
                   <div class="content">
@@ -288,7 +288,7 @@
             </div>
             <div class="col">
                 <div class="content-card accent-top form-card h-100">
-                  <div class="headline">
+                  <div class="headline mb-5">
                     <h3><a class="text-link" href="/guides/fsa_farm__loan_compass.pdf" download>Your FSA Farm Loan Compass</a></h3>
                   </div>
                   <div class="content">
